# surgicalai01

./:    .claudeignore  .env.bootstrap.example  .env.gas.example  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.converter  Dockerfile.device_master  Dockerfile.display  Dockerfile.firebase_sync  Dockerfile.gas_display  Dockerfile.gas_gateway  Dockerfile.inference  Dockerfile.mock_external_ai  Dockerfile.mock_hospital_api  GEMINI.md  README.md  SurgicalAI.desktop  docker-compose.3rdparty.yml  docker-compose.bootstrap.yml  docker-compose.converter.yml  docker-compose.gas.mac.yml  docker-compose.gas.yml  docker-compose.local.yml  docker-compose.mac.yml  docker-compose.yml  firestore.indexes.json  firestore.rules  install.sh  one click HW deployment.sh  package-lock.json  package.json  pyproject.toml  requirements.converter.txt  requirements.device_master.txt  requirements.display.txt  requirements.firebase_sync.txt  requirements.gas_display.txt  (+14 more)
adapters/: README.md  bahadir_adapter.py  edlo_adapter.py  rhosse_adapter.py
docs/: 3rd_party_ai_inference_spec.md  architecture_diagram.md  bringel_cylinder_detection.md  customer_api_spec.md  device_master_catalog_spec.md  device_master_integration.md  integration_architecture.md  model_conversion_guide.md  rpi_onboarding_guide.md  saas_backend_api_spec.md
public/: app.js  auth.js  firebase-config.js  index.html  tailwind-custom.css
scripts/: SurgicalAI.desktop  antigravity-launcher.service  check_system.sh  cleanup_project.py  compile_doccheck.sh  compile_surgeonet.sh  generate_surgeonet_mocks.py  harness_e2e.py  (+17 more)
(+65 files in other folders)
